k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app-amine
  labels:
    app: todo-app-amine
